Fix VmPageDetails title for smaller resolution
Use isWidthLimited of PageSection for VM title. This fixes padding of VM
details title on narrow resolution such as mobile.
Also, use flex-wrap for the title. This fixes situation where the
actions buttons are inaccessible and off-screen if vm name is too long.

--- a/src/components/vm/vmDetailsPage.scss
+++ b/src/components/vm/vmDetailsPage.scss
@@ -15,6 +15,7 @@
 
 .vm-top-panel {
   display: flex;
+  flex-wrap: wrap;
 
   .vm-name {
     font-weight: var(--pf-global--FontWeight--light);
